Fix landing page display on mobile devices by providing 2 different customer feedback screenshot sizes

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -114,9 +114,13 @@
         <div class="row justify-content-center">
             <div class="col-12">
                 <div class="card">
+                    <div class="card-header">
+                        Customer's review
+                    </div>
                     <div class="card-body">
                         <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <img src="assets/img/customer-feedback-2022-07-13_00-24-2.png" alt="..."/>
+                            <img class="customer-feedback d-md-none d-lg-none d-xl-none" src="assets/img/customer-feedback-2022-07-13-mobile.png" alt="Customer review"/>
+                            <img class="d-none d-md-block" src="assets/img/customer-feedback-2022-07-13-desktop.png" alt="Customer review"/>
                         </div>
                     </div>
                 </div>
